# biblioteka

./: CMakeLists.txt  README.md
examples/: example_approximation.cpp  example_integration.cpp  example_interpolation.cpp  example_nonlinear_solver.cpp  example_ode_solver.cpp  example_system_solver.cpp
include/: approximation.h  integration.h  interpolation.h  linear_solver.h  nonlinear_solver.h  ode_solver.h
src/: approximation.cpp  integration.cpp  interpolation.cpp  linear_solver.cpp  nonlinear_solver.cpp  ode_solver.cpp
tests/: test_approximation.cpp  test_integration.cpp  test_interpolation.cpp  test_linear_solver.cpp  test_nonlinear_solver.cpp  test_ode_solver.cpp
